@startuml AudioSm
' Single line comments (like this) start with a single quote.
' The name of the state machine is specified above.

'############################ styles ############################
skinparam state {
    BackgroundColor<<red>> a20025
    FontColor<<red>> white
    BackgroundColor<<blue>> 1ba1e2
    FontColor<<blue>> white
    BackgroundColor<<dark>> 545454
    FontColor<<dark>> white
}

'############################ state organization ############################
' Top-level initial transition.
[*] -> PLAYER

' Composite state for the audio player lifecycle.
state PLAYER {
    ' Initial substate of PLAYER.
    [*] -> IDLE

    state IDLE
    state LOADING <<dark>>
    state PLAYING <<blue>>

    '############################ handlers ############################
    IDLE: enter / stopAll(); uiIdle();

    ' Start flow: begin music first, then move on when ready.
    IDLE --> LOADING : LAUNCH_STORY_PROCESS
    LOADING: enter / loadingSpeech(); loadingUi();
    LOADING --> IDLE : STOP
    LOADING --> PLAYING : SPEECH_READY

    ' While playing, start speech, ambient, and sync all.
    PLAYING: enter / startSpeech(); startMusic(); startAmbient(); syncAll(); uiPlaying();
    PLAYING --> IDLE : STOP

    ' Soft controls while playing.
    PLAYING : REPLAY / startSpeech(); startMusic(); startAmbient(); syncAll(); uiPlaying();
    PLAYING : PAUSE / pauseAll(); blurDots();
    PLAYING : RESUME / resumeAll(); unblurDots();  
    PLAYING : MUTE_MUSIC   / muteMusic();
    PLAYING : UNMUTE_MUSIC / unmuteMusic();
    PLAYING : MUTE_AMBIENT / muteAmbient();
    PLAYING : UNMUTE_AMBIENT / unmuteAmbient();
}

'######################## StateSmith config ########################
/'! $CONFIG : toml
SmRunnerSettings.transpilerId = "JavaScript"
'/

@enduml
